# flatscanner-demo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DELIVERY_FLOW_RU.md  Dockerfile  PROCESS_OVERVIEW_EN.md  README.md  README_PROCESS_RU.md  pyproject.toml
agent-workflow-migration-kit/: 01_OVERVIEW_RU.md  02_ADOPTION_PLAN_RU.md  03_ORCHESTRATOR_PLAYBOOK_RU.md  04_DELIVERY_PLAYBOOK_RU.md  05_TASK_SEQUENCE_RU.md  06_AGENT_SYSTEM_MAPPING_RU.md  07_GITHUB_REPOSITORY_BOOTSTRAP_RU.md  README_RU.md
deploy/: docker-compose.vps.yml
docs/: README.md  ai-pr-workflow.md  claude-pr-playbook.md  claude-worker-orchestration.md  context-economy-workflow.md  context-policy.md  glossary.md  lightrag-local-pilot.md  local-memory-sync.md  project-idea.md
scripts/: add-ai-runner-label.ps1  ai-review-comment.ps1  ai-review-policy.ps1  checkpoint_apply.py  checkpoint_decision.py  claude-review-output.ps1  lightrag_pilot.py  new-claude-worktree.ps1  publish-claude-branch.ps1  register_telegram_commands.py  run-ai-pr-review.ps1  run-claude-pr-fix.ps1  run-claude-pr-review.ps1  run-codex-pr-review.ps1  set-implementation-agent.ps1  set-review-runner.ps1  setup-self-hosted-runner.ps1  start-claude-worker.ps1  start-codex-worker.ps1  start-implementation-worker.ps1  sync_memory.py  test-ai-review-comment-payload.ps1  test-ai-review-verdict-normalization.ps1  test-claude-review-output-parsing.ps1  test-implementation-agent-switcher.ps1
specs/: README.md
src/: __init__.py
tests/: test_029_priced_url.py  test_031_amenities_block.py  test_adapters.py  test_analysis.py  (+39 more)
(+301 files in other folders)
